package DesignPatterns.AdapterPattern.Duck;

public interface Duck {
    void quack();
    void fly();
}
