package DesignPatterns.AdapterPattern.Turkey;

public interface Turkey {
    void gobble();
    void fly();
}
